--- a/index.html
+++ b/index.html
@@ -12,28 +12,53 @@
         $body.html('');
 
         // This is the display function
-        var tweetDisplay = function() {
-          var index = streams.home.length - 1;
+        var ref;
+        var tweetDisplay = function(user) {
+          if (user) {
+            ref = streams.users[user];
+          } else {
+            ref = streams.home;
+          }
+
           $body.empty();
-          while(index >= 0){
-            var tweet = streams.home[index];
-            var $tweet = $('<div></div>');
-            $tweet.text(tweet.created_at + ' @' + tweet.user + ': ' + tweet.message);
+          var index = ref.length - 1;
+          while (index >= 0) {
+            var tweet = ref[index];
+            var $tweet = $('<div>' +
+              tweet.created_at +
+              '<div class="userName"><a href="#" class="' + tweet.user + '"">' + 
+              ' @' + tweet.user + 
+              '</a></div>' +
+              tweet.message +
+              '</div>');
             $tweet.appendTo($body);
             index -= 1;
           }
         };
 
-        // This function refreshes the stream if users have added new tweets
-        var firstCreatedAt;
-        var tweetRefresh = function(callback, frequency) {
-          setInterval(function() {
-            var lastIndex = streams.home.length - 1;
-            if (firstCreatedAt != streams.home[lastIndex].created_at)
-              callback();
-            firstCreatedAt = streams.home[lastIndex].created_at;
+        // This function refreshes the stream if there are new tweets
+        var streamLength, testLength, timer;
+        var tweetRefresh = function(callback, frequency, user) {
+          timer = setInterval(function() {
+            if (user) {
+              testLength = streams.users[user].length;
+            } else {
+              testLength = streams.home.length;
+            }
+
+            if (streamLength != testLength)
+              callback(user);
+            streamLength = testLength;
           }, frequency);
         }
+
+        // This adds filter functionality
+        $('body').on('click', 'a', function() {
+          var user = this.getAttribute('class');
+          clearInterval(timer);
+          tweetDisplay(user);
+          tweetRefresh(tweetDisplay, 1000, user);
+        });
 
 
         tweetDisplay();
